// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expenses Summary with expenses 1`] = `
<div>
  <h1>
    View 
    4
     
    expenses
     totaling 
    $54,545.44
  </h1>
</div>
`;

exports[`Should render expenses Summary with one expenses 1`] = `
<div>
  <h1>
    View 
    1
     
    expense
     totaling 
    $545.44
  </h1>
</div>
`;
